--- a/simpleplex/public/styles/podcasts.css
+++ b/simpleplex/public/styles/podcasts.css
@@ -1,4 +1,3 @@
-
 .podcast-art {
 	float: left;
 	display: block;
@@ -110,8 +109,8 @@
 	font-size: 12px;
 }
 #podcast-context .contextbox-top {
-	background: url('../images/layout/contextbox-top-podcast.png') no-repeat bottom;
-	padding-top: 59px;
+	background: url('../images/layout/contextbox-top-podcast.png') no-repeat;
+	padding-top: 54px;
 	overflow: hidden;
 	height: 0;
 }
